terminada introduccion de shaders con utilitarios shaders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,6 @@ include_directories(${SDL2_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_D
 string(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES_FIX)
 target_link_libraries(sdlogl ${SDL2_LIBRARIES_FIX} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
 
+#copy resources
+file(COPY res DESTINATION ${CMAKE_BINARY_DIR})
+
